app/k8s/postgres-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      labels:
        service: postgres
    spec:
      containers:      
        - name: postgres
          image: igrich/flaskblog_db:v1.1
          #imagePullPolicy: "IfNotPresent"
          imagePullPolicy: Never
          ports:
            - containerPort: 5431
          volumeMounts:
            - name: postgres-volume-mount
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"      
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  type: NodePort
  selector:
    service: postgres
  ports:
  - port: 5431
