app/k8s/unused-flaskblog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: igrich
  labels:
    app: flask-blog-app
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-blog-app
